kubernetes/manifests/linkwarden/meilisearch.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meilisearch
  namespace: linkwarden
  labels:
    app: meilisearch
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: meilisearch
  template:
    metadata:
      labels:
        app: meilisearch
    spec:
      containers:
        - name: meilisearch
          image: getmeili/meilisearch:v1.12.8
          ports:
            - name: http
              containerPort: 7700
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /meili_data
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 1Gi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: meilisearch-data
---
apiVersion: v1
kind: Service
metadata:
  name: meilisearch
  namespace: linkwarden
  labels:
    app: meilisearch
spec:
  type: ClusterIP
  ports:
    - port: 7700
      targetPort: 7700
      protocol: TCP
  selector:
    app: meilisearch
