kubernetes/manifests/linkwarden/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: linkwarden
  namespace: linkwarden
  labels:
    app: linkwarden
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: linkwarden
